<?xml version="1.0"?>
<package format="2">
  <name>loki_navigation</name>
  <version>0.0.0</version>
  <description>The loki_navigation package</description>

  <maintainer email="ra@ubiquityrobotics.com">Rohan Agrawal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>loki_base</depend>
  <depend>raspicam</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

