<?xml version="1.0"?>
<package format="2">
  <name>loki_viz</name>
  <version>0.0.2</version>
  <description>The loki_viz package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <export>
  </export>
</package>
